--- a/frontend_fornecedores/package.json
+++ b/frontend_fornecedores/package.json
@@ -7,7 +7,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^7.11.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "recharts": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
